
	* On getting the decoded stream from bs mime part, reset
	to offer a stream started in 0 offset.
	* Fix error detecting embedded message/rfc822 in bs.
	* Add the bodystruct of the child to the embedded message created
	in tny_camel_bs_mime_part_get_parts, as this is the expected
	structure in tinymail.
	* Handle better in IMAP "NIL" parameter in fetch response.

2009-12-12  Carl Simonson <simonsonc@gmail.com>

	Committed by Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder-monitor.c, libtinymail/tny-folder-monitor.h:
	Fix override of update method by removing the addition of the update
	method on TnyFolderMonitor.

2009-12-12  Carl Simonson <simonsonc@gmail.com>

	Committed by Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-msg.c, libtinymail-camel/tny-camel-msg.h
	(tny_camel_msg_parse): Correct type of self parameter

2009-12-11  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/pop3/camel-pop3-folder.c (pop3_sync): do expunge
	messages when users request it. An invalid message ID was passed
	to the server and thus, no message was deleted.

2009-12-10  Jose Dapena Paz  <jdapena@igalia.com>

	* Enable bodystruct parsing for partial retrieval.
	* Improvement in content type recoginition in bodystruct mime part.
	* Offer header pairs available in body struct if body itself is not
	fetched.
	* Bodystruct parts are not purged.
	* libtinymail-camel/tny-camel-bs-mime-part.c: only use format_text with
	text/plain mime parts.
	* libtinymail-camel/tny-camel-bs-mime-part.c: new methods is_fetched, to
	know if a specific mime part is already fetched to cache.
	* libtinymail-camel/tny-camel-bs-msg-receive-strategy.c: retrieve bodies
	on fetching the bodystructure.
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-message-cache.c:
	don't wipe the bs cached parts accidentally.
	* Better setup of using bodystruct for IMAP. Also, set as default bodystruct
	based implementation.