@@ -7,6 +7,8 @@
 	in tny_camel_bs_mime_part_get_parts, as this is the expected
 	structure in tinymail.
 	* Handle better in IMAP "NIL" parameter in fetch response.
+	* Fix part specs of direct child of attached messages in
+	bodystruct parser.
 
 2009-12-12  Carl Simonson <simonsonc@gmail.com>
 
